# competitest

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs  slice_trim_ext.rs  tests.rs
