[package]
name = "competitest"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
env_logger = "0.11.5"
futures = "0.3.31"
glob = "0.3.1"
indicatif = "0.17.9"
indicatif-log-bridge = "0.2.3"
itertools = "0.13.0"
log = "0.4.22"
tokio = { version = "1.41.1", features = ["full"] }
